--- a/coronavirus-tracker/pom.xml
+++ b/coronavirus-tracker/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+	<!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.javabrains</groupId>
 	<artifactId>coronavirus-tracker</artifactId>
